--- a/ch02/ch02_07_ajax-cone.html
+++ b/ch02/ch02_07_ajax-cone.html
@@ -114,7 +114,7 @@
 
         // Bind VAO
         gl.bindVertexArray(coneVAO);
-
+        console.log(model);
         // Set uniform color
         gl.uniform3fv(program.uModelColor, model.color);
 
