--- a/ch02/ch02_08_ajax-car.html
+++ b/ch02/ch02_08_ajax-car.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
   <title>Real-Time 3D Graphics with WebGL2</title>
   <link rel="shortcut icon" type="image/png" href="/common/images/favicon.png" />
@@ -105,42 +106,44 @@
       // for education purposes.
       for (let i = 1; i < 179; i++) {
         fetch(`/common/models/nissan-gtr/part${i}.json`)
-        .then(res => res.json())
-        .then(data => {
+          .then(res =>
+            res.json()
+          )
+          .then(data => {
+            console.log(data);
+            // Create a VAO
+            const vao = gl.createVertexArray();
 
-          // Create a VAO
-          const vao = gl.createVertexArray();
+            // Bind VAO
+            gl.bindVertexArray(vao);
 
-          // Bind VAO
-          gl.bindVertexArray(vao);
+            // VBO
+            const vertexBufferObject = gl.createBuffer();
+            gl.bindBuffer(gl.ARRAY_BUFFER, vertexBufferObject);
+            gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(data.vertices), gl.STATIC_DRAW);
 
-          // VBO
-          const vertexBufferObject = gl.createBuffer();
-          gl.bindBuffer(gl.ARRAY_BUFFER, vertexBufferObject);
-          gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(data.vertices), gl.STATIC_DRAW);
+            // Configure instructions
+            gl.enableVertexAttribArray(program.aVertexPosition);
+            gl.vertexAttribPointer(program.aVertexPosition, 3, gl.FLOAT, false, 0, 0);
 
-          // Configure instructions
-          gl.enableVertexAttribArray(program.aVertexPosition);
-          gl.vertexAttribPointer(program.aVertexPosition, 3, gl.FLOAT, false, 0, 0);
+            // IBO
+            const indexBufferObject = gl.createBuffer();
+            gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBufferObject);
+            gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(data.indices), gl.STATIC_DRAW);
 
-          // IBO
-          const indexBufferObject = gl.createBuffer();
-          gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBufferObject);
-          gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(data.indices), gl.STATIC_DRAW);
+            // Attach them for later access
+            data.vao = vao;
+            data.ibo = indexBufferObject;
 
-          // Attach them for later access
-          data.vao = vao;
-          data.ibo = indexBufferObject;
+            // Push data onto parts array
+            parts.push(data);
 
-          // Push data onto parts array
-          parts.push(data);
-
-          // Clean
-          gl.bindVertexArray(null);
-          gl.bindBuffer(gl.ARRAY_BUFFER, null);
-          gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, null);
-        })
-        .catch(console.error);
+            // Clean
+            gl.bindVertexArray(null);
+            gl.bindBuffer(gl.ARRAY_BUFFER, null);
+            gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, null);
+          })
+          .catch(console.error);
       }
     }
 
@@ -162,7 +165,7 @@
       parts.forEach(part => {
         // Bind
         gl.bindVertexArray(part.vao);
-        gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, part.ibo);
+        // gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, part.ibo);
 
         // Draw
         gl.drawElements(gl.LINES, part.indices.length, gl.UNSIGNED_SHORT, 0);
@@ -208,4 +211,5 @@
   </canvas>
 
 </body>
+
 </html>
