--- a/ch03/ch03_07_positional-lighting.html
+++ b/ch03/ch03_07_positional-lighting.html
@@ -32,7 +32,7 @@
     void main(void) {
       vec4 vertex = uModelViewMatrix * vec4(aVertexPosition, 1.0);
       vec4 light = uModelViewMatrix * vec4(uLightPosition, 1.0);
-
+      //vec4 light = vec4(uLightPosition,1.0);
       // Set varyings to be used inside of fragment shader
       vNormal = vec3(uNormalMatrix * vec4(aVertexNormal, 1.0));
       vLightRay = vertex.xyz - light.xyz;
